--- a/config_ejemplo/config.yaml
+++ b/config_ejemplo/config.yaml
@@ -1,5 +1,6 @@
 calendarios:
-    id_propuestas: IDCALENDARIOPROPUESTAS
+    url_propuestas: http://40.114.254.128/caldav.php/usuario/calendar/propuestas
+    url_definitivos: http://40.114.254.128/caldav.php/usuario/calendar/guardias 
 telegram:
     token_bot: IDTOKENBOT
 log:
