Arreglado el Locale para que sea multiplataforma
Cambiado el config.yaml de ejemplo para que pueda integrarse con el despliegue mediante docker compose

Añadida funcionalidad completa de pytest sin depender del testrunner de PyCharm

Añadidos Dockerfile y docker-compose.yml para permitir el despliegue de la aplicación mediante docker

Se ha cambiado la carpeta donde se alojan los logs, la configuración en curso y la base de datos sqlite a /data, para posteriormente crear un volumen de persistencia en docker

Añadida ruta configurable para la base de datos sqlite en caso de desear cambiarla.

Signed-off-by: Luis Marin <luimarpen@alum.us.es>

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ gradle-app.setting
 /.vscode
 /.vs
 /calendario.ics
-/config
+/data/config
 /log
 /librerias/__pycache__
 /BotGuardianes.pyproj
@@ -24,3 +24,4 @@ gradle-app.setting
 /tests/.pytest_cache/
 /site/
 /.pytest_cache/
+/data/
