Cambiada la estructura de la base de datos, ahora solo se necesita una tabla.
Agregada función para insertar evento en REST y añadidos los parámetros necesarios

Signed-off-by: Luis Marin <luimarpen@alum.us.es>

--- a/config_ejemplo/config.yaml
+++ b/config_ejemplo/config.yaml
@@ -19,5 +19,6 @@ REST:
     url_getIDrestporIDtel: $REST_GET_ID_REST_POR_ID_TEL
     url_getrol: $REST_GET_ROL
     url_getTelegramID: $REST_GET_TELEGRAM_ID
+    url_evento:  $REST_EVENTO
     contrasena: $REST_PASSWORD
     usuario: $REST_USUARIO
