Mejoradas las cadenas de texto que muestra el bot
Añadida documentación

Signed-off-by: Luis Marin <luimarpen@alum.us.es>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   botguardianes:
-    image: luimarpen/botguardianes
+    image: luimarpen/botguardianes:latest
     restart: always
     volumes:
       - botguardianes:/BotGuardianes/data
